--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <script src="myscripts.js"></script>
+    <div class="col1">
+    </div>
+    <div class="col2">
+      <div class="header" id="header">
+        <img id="header-img" src="img/cairo-header.jpg" alt="Cairo">
+        <p class="title" id="blog-title">Sample Text</p>
+        <p class="subtitle" id="blog-subtitle">Lorem Ipsum ana ahball w 3abeet w bakol arnabeet</p>
+      </div>
+    </div>
+    <div class="col3">
+    </div>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
-
