Complete Experimental Navbar v1.2

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         <a href="#"><img id="nav-btn" src="img/phone-nav-btn.png" alt="Navigation Bar"</a>
       </div>
     </div>
+    <div class="menu-tab">
+      <ul>
+        <li>Home</li>
+        <li>About Us</li>
+        <li>Contact Us</li>
+      </ul>
+    </div>
     <script src="scripts/script.js"></script>
   </body>
 </html>
