--- a/index.html
+++ b/index.html
@@ -6,6 +6,43 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <script src="myscripts.js"></script>
+    <div class="header" id="header">
+      <img id="header-img" src="img/cairo-header.jpg" alt="Cairo"> <!-- https://www.dentons.com/~/media/Images/Website/Background%20Images/Offices/Cairo/Cairo.jpg -->
+      <p class="title" id="blog-title">VisitCairo</p>
+      <p class="subtitle" id="blog-subtitle">Lots of wonders not to miss out on</p>
+    </div>
+    <div class="col1" id="col1">
+      <div class="tab">
+      </div>
+    </div>
+    <div class="col2" id="col2">
+      <div class="tab">
+        <ul class="nav">
+          <a href="#"><li>Home</li></a>
+          <a href="#"><li>About Us</li></a>
+          <a href="#"><li style="float: right;">Contact Us</li></a>
+        </ul>
+      </div>
+    </div>
+    <div class="col3" id="col3">
+      <div class="tab">
+        <a href="#"><img id="nav-btn" src="img/phone-nav-btn.png" alt="Navigation Bar"</a>
+      </div>
+    </div>
+    <div class="menu-tab">
+      <ul>
+        <li>Home</li>
+        <li>About Us</li>
+        <li>Contact Us</li>
+      </ul>
+    </div>
+    <div class="sidebar">
+      <ul>
+        <li>Home</li>
+        <li>About Us</li>
+        <li>Contact Us</li>
+      </ul>
+    </div>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
