--- a/food.html
+++ b/food.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sama's and Laila's Website</title>
+    <title>Cairo's Best | Dining</title>
     <meta charset="UTF-8">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
@@ -23,6 +24,8 @@
           <a href="index.html"><li>Home</li></a>
           <a href="aboutUs.html"><li>About Us</li></a>
           <a href="#"><li style="float: right;">Contact Us</li></a>
+          <input id="search-bar" type="text" name="search" placeholder="Search.." style="float: right;">
+          <a href="#"><li style="float: right; padding: 0px;"><img id="search" src="img/search-icon2.png" alt="Search"></li></a>
         </ul>
       </div>
       <!-- I'm working here now -->
@@ -46,7 +49,7 @@
         <img src="https://media-cdn.tripadvisor.com/media/photo-s/03/5b/01/29/zooba.jpg" alt="Zooba Entrance"> <!-- https://media-cdn.tripadvisor.com/media/photo-s/03/5b/01/29/zooba.jpg -->
         <br>
         <br>
-        Last but certainly not least, if you are not the biggest fan of oriental food. Here are some restaurants that will be the right fit: 
+        Last but certainly not least, if you are not the biggest fan of oriental food. Here are some restaurants that will be the right fit:
         <ul>
           <li>Brioche doree</li>
           <li>Beanos</li>
@@ -86,9 +89,10 @@
     </div>
     <div class="menu-tab">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="aboutUs">About Us</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <a href="index.html"><li>Home</li></a>
+        <a href="aboutUs.html"><li>About Us</li></a>
+        <a href="#"><li>Contact Us</li></a>
+        <li><input type="text" name="search" placeholder="Search.." style="z-index: 1001;"></li>
       </ul>
     </div>
     <script src="scripts/script.js"></script>
